# knowledge-platform

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  prepare.md  pyproject.toml  zeabur.json
.claude/knowledge/: index.md
.cursor/rules/: 00-core.mdc  docs.mdc  git-pr.mdc  python.mdc  speckit.mdc
.github/workflows/: build.yml  deploy.yml
.speckit/: constitution.md
.speckit/plans/: technical-plan.md
.speckit/specs/: epic-1-data-collection.md  epic-2-data-processing.md  epic-3-storage.md  epic-4-query.md  epic-5-integration.md  epic-6-deployment.md
.speckit/tasks/: phase-1-tasks.md  phase-2-tasks.md  phase-3-tasks.md  phase-4-tasks.md  phase-5-tasks.md  phase-6-tasks.md  phase-7-tasks.md
deploy/: Caddyfile  docker-compose.prod.yml  docker-compose.yml
deploy/terraform/: README.md
docs/: API.md  ARCHITECTURE.md  BACKUP.md  DEPENDENCIES.md  DEPLOYMENT.md  TESTING.md
scripts/: backup.py  embed_all.py  import_chat.py  import_zip.py  restore.py  setup_db.py  test_api.sh
tests/: conftest.py  test_auth.py  test_import_dedup.py
